--- a/termos-uso.html
+++ b/termos-uso.html
@@ -129,6 +129,7 @@
                     <ul class="list-unstyled">
                         <li></li>
                         <li><a href="jobs.html">Trabalhe conosco</a></li>
+                        <li><a href="termos-uso.html">Termos de uso</a></li>
                         <li><a href="termos-privacidade.html">Política de privacidade</a></li>
                     </ul>
                 </div>
