ajusta formulário de contato

--- a/jobs.html
+++ b/jobs.html
@@ -69,7 +69,7 @@
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="fw-bold mb-0">Envie seu currículo para</h6>
-                                <p class="text-muted mb-0"><a href="mailto:desenv@elfotec.com.br"><span style="color: rgb(176, 189, 211);">desenv@elfotec.com.br</span><br></a></p>
+                                <p class="text-muted mb-0"><a href="mailto:contato@elfotec.com.br"><span style="color: rgb(176, 189, 211);">contato@elfotec.com.br</span><br></a></p>
                             </div>
                         </div>
                     </div>
