--- a/termos-privacidade.html
+++ b/termos-privacidade.html
@@ -78,9 +78,9 @@
                                 <h4 class="card-title">Informações sobre o controlador e Responsável pelo Tratamento de dados<br></h4>
                                 <p class="card-text">Conforme previsão do art. 5º da Lei Geral de Proteção de dados trazemos aqui informações sobre o controlador definido pela legislação “<em>in verbis</em>”:<br></p>
                                 <p class="card-text"><em>Art. 5º, VI – controlador: pessoa natural ou jurídica, de direito público ou privado, a quem competem as decisões referentes ao tratamento de dados pessoais;</em><br></p>
-                                <p class="card-text">O site tem como CONTROLADOR e responsável por definir e tomar qualquer decisão referente ao tratamento de dados realizado por nós e por nossa equipe a Sra. Joelma Barbosa de Melo Araujo, contactável por <a href="mailto:joelma@elfotec.com.br">joelma@elfotec.com.br</a>.<br></p>
+                                <p class="card-text">O site tem como CONTROLADOR e responsável por definir e tomar qualquer decisão referente ao tratamento de dados realizado por nós e por nossa equipe a Sra. Joelma Barbosa de Melo Araujo, contactável por <a href="mailto:contato@elfotec.com.br">contato@elfotec.com.br</a>.<br></p>
                                 <p class="card-text">O CONTROLADOR é um profissional/empresa de nossa inteira confiança, que está ciente de todas as normas trazidas na legislação que realiza a proteção de dados, além de ter total ciência e conhecimento das normas estabelecidas na nossa Política Interna.<br></p>
-                                <p class="card-text">Já o tratamento de dados coletados em nosso site é realizado pelo Sr. Lauro César Araujo, contactável por <a href="mailto:laurocesar@elfotec.com.br">laurocesar@elfotec.com.br</a>.<br></p>
+                                <p class="card-text">Já o tratamento de dados coletados em nosso site é realizado pelo Sr. Lauro César Araujo, contactável por <a href="mailto:contato@elfotec">contato@elfotec</a></p>
                                 <h4 class="card-title">Informações sobre o Conteúdo do site e Classificação Indicativa<br></h4>
                                 <p class="card-text">O conteúdo trazido é direcionado para pessoas que tenham interesse, curiosidade ou busquem informações a respeito do conteúdo do nosso site.<br></p>
                                 <p class="card-text">Todo conteúdo abordado em nossas páginas é produzido por nossa equipe ou por parceiros, respeitando as legislações nacionais, bem como, os valores éticos e humanos, além dos princípios morais, zelando pela transparência e veracidade em todas as informações trazidas.<br></p>
@@ -214,13 +214,13 @@
                                 <p class="card-text">É livre o consentimento do usuário/cliente, uma vez que não utilizamos de nenhum meio de coação, obrigatoriedade, indução, constrangimento, ameaça ou imposição para que o usuário/cliente conceda e permita que seja realizado o tratamento de seus dados.<br></p>
                                 <h4 class="card-title">Eliminação de dados<br></h4>
                                 <p class="card-text">Caso o usuário/cliente não permita o armazenamento de seus dados, pode entrar em contato conosco por meio dos canais de contato abaixo:<br></p>
-                                <p class="card-text">E-mail: joelma@elfotec.com.br<br></p>
+                                <p class="card-text">E-mail: contato@elfotec.com.br<br></p>
                                 <p class="card-text">Após o requerimento de eliminação de dados, temos o prazo de 7 dias para que os dados sejam eliminados ou anonimizados.<br></p>
                                 <h4 class="card-title">Canais de Contato e encarregado<br></h4>
                                 <p class="card-text">Disponibilizamos canais de contato para o nosso usuário/cliente em busca de termos um relacionamento claro e cordial, nos disponibilizando para esclarecer qualquer dúvida sobre o nosso site, bem como sobre o modo como realizamos o tratamento de seus dados.<br></p>
                                 <p class="card-text">Buscamos por meio desse profissional ter uma comunicação melhor e mais direta com os nossos usuários/clientes.<br></p>
                                 <p class="card-text">Disponibilizamos abaixo Canais de Atendimento para você poder entrar em contato com o nosso responsável pelo controle de dados:<br></p>
-                                <p class="card-text">E-mail: joelma@elfotec.com.br<br></p>
+                                <p class="card-text">E-mail: contato@elfotec.com.br<br></p>
                                 <p class="card-text">Está Política de Privacidade e Segurança passa a ter validade a partir de 25 de abril de 2022 com validade indeterminada.<br></p><a class="card-link" href="https://diegocastro.adv.br/modelo-politica-privacidade/">Fonte</a>
                             </div>
                         </div>
