--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
         </div>
     </section>
-    <section class="position-relative py-4 py-xl-5">
+    <section id="contato" class="position-relative py-4 py-xl-5">
         <div class="container position-relative">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
