--- a/termos-uso.html
+++ b/termos-uso.html
@@ -10,6 +10,8 @@
     <meta name="description" content="Tecnologia, laboratórios e inovação para informação na web">
     <meta property="og:type" content="website">
     <meta name="twitter:title" content="Elfotec Tecnologia da Informação">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/elfocat3-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/elfocat3-32x32.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/css/styles.min.css">
