--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                 <div class="col-md-6 col-lg-5 col-xl-4">
                     <div>
                         <form class="p-3 p-xl-4" data-bss-recipient="46ef85fe512b421b335c4dcc0c540439" data-bss-subject="Elfotec - Fale Conosco" data-bss-loading-message="Enviando..." data-bss-success-title="Sucesso" data-bss-success-message="Sua mensagem foi enviada" data-bss-error-message="Algo aconteceu de errado..." data-bss-close="Fechar" data-bss-empty-form-message="Por favor, preencha todos os campos">
-                            <div class="mb-3"><input class="form-control" type="text" id="name-1" name="name" placeholder="Nome" style="color: rgb(0,0,0);"></div>
-                            <div class="mb-3"><input class="form-control" type="tel" name="phone" placeholder="Telefone/Whatsapp" style="color: rgb(0,0,0);"></div>
-                            <div class="mb-3"><input class="form-control" type="email" id="email-1" name="email" placeholder="Email" style="color: rgb(0,0,0);"></div>
-                            <div class="mb-3"><textarea class="form-control" id="message-1" name="message" rows="6" placeholder="Mensagem" style="color: rgb(0,0,0);"></textarea></div>
+                            <div class="mb-3"><input class="form-control" type="text" id="name-1" name="name" placeholder="Nome"></div>
+                            <div class="mb-3"><input class="form-control" type="tel" name="phone" placeholder="Telefone/Whatsapp"></div>
+                            <div class="mb-3"><input class="form-control" type="email" id="email-1" name="email" placeholder="Email"></div>
+                            <div class="mb-3"><textarea class="form-control" id="message-1" name="message" rows="6" placeholder="Mensagem"></textarea></div>
                             <div><button class="btn btn-primary d-block w-100" type="submit">Enviar</button></div>
                         </form>
                     </div>
