adiciona política de uso ao enviar mensagem

--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
                             <div class="mb-3"><input class="form-control" type="text" id="name-1" name="name" placeholder="Nome"></div>
                             <div class="mb-3"><input class="form-control" type="tel" name="phone" placeholder="Telefone/Whatsapp"></div>
                             <div class="mb-3"><input class="form-control" type="email" id="email-1" name="email" placeholder="Email"></div>
-                            <div class="mb-3"><textarea class="form-control" id="message-1" name="message" rows="6" placeholder="Mensagem"></textarea></div>
+                            <div class="mb-3"><textarea class="form-control" id="message-2" name="message" rows="6" placeholder="Mensagem"></textarea></div>
+                            <div class="mb-3"><small>Ao enviar a mensagem você confirma que leu e aceitou os <a href="termos-uso.html">Termos de Uso</a> e a <a href="termos-privacidade.html">Política de Segurança e Privacidade</a>.</small></div>
                             <div><button class="btn btn-primary d-block w-100" type="submit">Enviar</button></div>
                         </form>
                     </div>
@@ -191,8 +192,8 @@
                     <ul class="list-unstyled">
                         <li></li>
                         <li><a href="jobs.html">Trabalhe conosco</a></li>
-                        <li><a href="termos-uso.html">Termos de uso</a></li>
-                        <li><a href="termos-privacidade.html">Política de privacidade</a></li>
+                        <li><a href="termos-uso.html">Termos de Uso</a></li>
+                        <li><a href="termos-privacidade.html">Política de Segurança e&nbsp; Privacidade</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last item social">
