--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="index.html#servicos">Serviços</a></li>
                     <li class="nav-item"><a class="nav-link active" href="index.html#contato">Fale conosco</a></li>
+                    <li class="nav-item"><a class="nav-link" href="jobs.html">Trabalhe conosco</a></li>
                 </ul>
             </div>
         </div>
