altera texto do jobs

--- a/jobs.html
+++ b/jobs.html
@@ -59,7 +59,7 @@
                 <div class="card-body">
                     <h4 class="card-title" style="text-align: center;">Criamos coisas incríveis com você!</h4>
                     <h6 class="text-muted card-subtitle mb-2"></h6>
-                    <p class="card-text" style="text-align: center;">Somos uma empresa jovem sediada em Brasília que nasceu para realizar sonhos por meio da tecnologia.&nbsp;<br><br>Se você gosta de desafios e de aprender, seja bem-vindo! Também contratamos estudantes interessados em estágio remunerado.</p>
+                    <p class="card-text" style="text-align: center;">Somos uma empresa jovem sediada em Brasília que nasceu para realizar sonhos por meio da tecnologia.&nbsp;<br><br>Se você gosta de desafios e de aprender, seja bem-vindo! Além de profissionais experientes, contratamos estudantes interessados em estágio.</p>
                     <p class="card-text"></p>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                         </svg></div>
                     <div class="px-3">
                         <h4>Imaginação com paixão</h4>
-                        <p>Visão plena, ousadia, inovação, integridade,&nbsp; honestidade e humildade são elementos que criam ideias incríveis</p>
+                        <p>Visão plena, ousadia, inovação, integridade,&nbsp; honestidade e humildade são elementos que realizam ideias incríveis</p>
                     </div>
                 </div>
             </div>
