adiciona informações do processamento de imagens

--- a/termos-privacidade.html
+++ b/termos-privacidade.html
@@ -53,7 +53,7 @@
                     <div class="position-relative" style="display: flex;flex-wrap: wrap;justify-content: flex-end;">
                         <div class="card">
                             <div class="card-body">
-                                <p class="card-text">Conforme as normas previstas na Lei 13.709/2018, que versa sobre a proteção de dados e as demais legislações pertinentes, apresentamos a Política de Privacidade e Segurança do site <a href="elfotec.com.br">elfotec.com.br</a>.<br></p>
+                                <p class="card-text">Conforme as normas previstas na Lei 13.709/2018, que versa sobre a proteção de dados e as demais legislações pertinentes, apresentamos a Política de Privacidade e Segurança do site <a href="https://www.elfotec.com.br">www.elfotec.com.br</a>.<br></p>
                                 <p class="card-text">Este documento é vinculado e integra as Condições e <a href="termos-uso.html">Termos de Uso deste site</a>, sendo passível de alteração a qualquer momento para adequação em regras estabelecidas pelas legislações que estabelecem o modo de tratamento dos dados.<br></p>
                                 <p class="card-text">O acesso, visita e permanência neste site é de livre escolha e acontece conforme a vontade/desejo do usuário, sendo sua visita e prosseguimento no site, escolha deste usuário.<br></p>
                                 <p class="card-text">Ficando ciente por meio deste documento que a partir do momento em que mantém o acesso e a permanência em qualquer uma das nossas páginas está automaticamente demonstrando estar de acordo, de forma explicita com todas as regras e termos trazidos na Política de Privacidade e Segurança descrita a seguir.<br></p>
@@ -105,6 +105,7 @@
                                     <li><strong>Registros de Acesso</strong>: Coletamos e tratamos ações vinculadas ao uso de dados, desde a sua inclusão, até a exclusão de dados, IP do usuário/cliente, data (dia/mês/ano), hora do acesso realizado.&nbsp;<br></li>
                                     <li><strong>Dados de navegação</strong>: Realizamos a coleta e o tratamento de dados relativos à navegação, assim podemos desempenhar uma melhor experiencia para o usuário/cliente – navegador onde o usuário realizou o acesso e páginas acessadas.&nbsp;<br></li>
                                 </ul>
+                                <p class="card-text">Além do dispositivo, nosso site mantém as imagens e outras informações submetidas em formulários próprios, ou por meio de API, para fins de aprimoramento das tecnologias de processamento e identificação de imagens.&nbsp;<br></p>
                                 <h4 class="card-title">Forma de coleta de dados<br></h4>
                                 <p class="card-text">A coleta de dados dos nossos usuários/cliente acontece respeitando todos os princípios e normas trazidos na Lei Geral de Proteção de Dados, com a condição expressa de consentimento livre e espontâneo do usuário para isso, visto que não realizamos nenhum tratamento sem permissão do usuário/cliente ou seu responsável.<br></p>
                                 <p class="card-text">Não utilizamos nenhum meio coercivo, autoritário, opressor, repressivo ou abusivo em busca de receber o consentimento do usuário para o tratamento de seus dados.<br></p>
@@ -133,6 +134,10 @@
                                             <tr>
                                                 <td>Dados de navegação</td>
                                                 <td>Coletados por meio de cookies durante a navegação no site. <br></td>
+                                            </tr>
+                                            <tr>
+                                                <td>Fotografias de partes do corpo humano</td>
+                                                <td>Upload de imagens por meio de formulários próprios e/ou uso de API</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -171,6 +176,10 @@
                                                 <td>Dados de navegação</td>
                                                 <td>Coleta, armazenamento, processamento, compartilhamento, comunicação de informações vinculadas as preferências e comportamento do usuário/visitante que acessa ao nosso site <br></td>
                                             </tr>
+                                            <tr>
+                                                <td>Fotografias de partes do corpo humano</td>
+                                                <td>Coleta, armazenamento, processamento&nbsp;de fotografias de forma anônima, isto é, sem identificação de nomes ou autores. Todas as imagens são fornecidas a título gratuito e são armazenadas para fins de aprimoramento das tecnologias de processamento e reconhecimento.<br></td>
+                                            </tr>
                                         </tbody>
                                     </table>
                                 </div>
@@ -180,7 +189,7 @@
                                 <h4 class="card-title">Compartilhamento/divulgação/publicação dos dados coletados<br></h4>
                                 <p class="card-text">Respeitamos todos os limites previstos na Lei Geral de Proteção de dados referentes ao compartilhamento/divulgação ou publicação de dados coletados por nós, agindo de boa-fé e moralmente sem nenhuma intenção de causar dano ao nosso usuário/cliente.<br></p>
                                 <p class="card-text">Os dados serão compartilhados apenas com parceiros, se necessário, sendo ciente o usuário de que concede o compartilhamento dos seus dados ao aceitar preencher formulários em nosso site/blog em troca de materiais gratuitos.<br></p>
-                                <p class="card-text">Os dados coletados e compartilhados conforme informação mencionada acima podem gerar retorno monetário ao proprietário e a equipe do site/blog, visto que ao preencher formulários em troca de materiais torna-se direito deste site/blog compartilhar as informações fornecidas em busca de gerar renda para manter este projeto.<br></p>
+                                <p class="card-text">Os dados coletados e compartilhados conforme informação mencionada acima podem gerar retorno monetário ao proprietário e a equipe do site, visto que ao preencher formulários em troca de materiais torna-se direito deste site compartilhar as informações fornecidas em busca de gerar renda para manter este projeto.<br></p>
                                 <p class="card-text">Em casos previstos em leis, boletim, ou caso recebamos algum tipo de determinação de autoridade pública ou por meio de alguma determinação regulatória é realizado o compartilhamento de dados, a publicação ou divulgação.<br></p>
                                 <p class="card-text">O titular tem direito de permitir o compartilhamento e o acesso de seus dados a um terceiro, desde que informe de maneira expressa a permissão que deu ao titular.<br></p>
                                 <p class="card-text">Em situações onde somos informados que há investigação criminal ao ser requisitada cooperação do nosso site, deixamos cientes os nossos usuários/clientes que cooperamos do modo como nos for requisitado.<br></p>
@@ -209,11 +218,11 @@
                                 <p class="card-text">A desativação dos cookies pode ocasionar ainda prejuízos na prestação do nosso serviço fim, bem como, em alguns casos não poderemos lhe proporcionar uma experiência mais adequada as suas preferências pois não teremos acesso a elas.<br></p>
                                 <h4 class="card-title">Tratamento de dados para outras finalidades<br></h4>
                                 <p class="card-text">Respeitando o que prevê a Lei Geral de Proteção de Dados informamos aos nossos usuários/cliente que podemos realizar o tratamento de seus dados para finalidades diversas posteriormente, sem que isso cause qualquer dano ou desrespeito ao titular dos dados, informando abaixo a finalidade de uso posterior das informações coletadas.<br></p>
-                                <p class="card-text">As informações que coletamos sobre o titular, dispositivo, navegação, localização e etc., podem continuar a ser utilizadas para que desenvolvamos a prestação de serviços mais aprimorados e de uma melhor experiência para o usuário/cliente em nossa página.<br></p>
+                                <p class="card-text">As informações que coletamos sobre o titular, dispositivo, navegação, localização, fotografias e etc., podem continuar a ser utilizadas para que desenvolvamos a prestação de serviços mais aprimorados e de uma melhor experiência para o usuário/cliente em nossa página.<br></p>
                                 <p class="card-text">Caso o titular dos dados requeira a exclusão de seus dados pode entrar em contato conosco pelo e-mail informado nesta Política de Privacidade.<br></p>
-                                <p class="card-text">Após o requerimento do titular na exclusão de seus dados acontecer, anonimizaremos os dados, sendo que esses continuarão em nossos arquivos de modo anonimizado, podendo ser utilizados futuramente com a finalidade de pesquisa, geração de estatísticas, divulgação de informações especificas, e ainda, em publicações.<br></p>
+                                <p class="card-text">Após o requerimento do titular na exclusão de seus dados acontecer, anonimizaremos os dados, sendo que esses continuarão em nossos arquivos de modo anonimizado, podendo ser utilizados futuramente com a finalidade de pesquisa, geração de estatísticas, divulgação de informações especificas, aprimoramento das tecnologias de processamento e recebimento de imagens e ainda, em publicações.<br></p>
                                 <h4 class="card-title">Consentimento do usuário<br></h4>
-                                <p class="card-text">O usuário/cliente ao acessar o nosso site/blog demonstra está de acordo com todas as informações contidas em nossa Política de Privacidade e Termos de Uso, bem como concede de livre e espontânea vontade que seus dados sejam tratados pela nossa equipe respeitando os princípios da finalidade, necessidade e adequação.<br></p>
+                                <p class="card-text">O usuário/cliente ao acessar o nosso site demonstra está de acordo com todas as informações contidas em nossa Política de Privacidade e Termos de Uso, bem como concede de livre e espontânea vontade que seus dados sejam tratados pela nossa equipe respeitando os princípios da finalidade, necessidade e adequação.<br></p>
                                 <p class="card-text">É livre o consentimento do usuário/cliente, uma vez que não utilizamos de nenhum meio de coação, obrigatoriedade, indução, constrangimento, ameaça ou imposição para que o usuário/cliente conceda e permita que seja realizado o tratamento de seus dados.<br></p>
                                 <h4 class="card-title">Eliminação de dados<br></h4>
                                 <p class="card-text">Caso o usuário/cliente não permita o armazenamento de seus dados, pode entrar em contato conosco por meio dos canais de contato abaixo:<br></p>
