--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="index.html#servicos">Serviços</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html#fundadores">Quem somos</a></li>
                     <li class="nav-item"><a class="nav-link active" href="index.html#contato">Fale conosco</a></li>
                     <li class="nav-item"><a class="nav-link" href="jobs.html">Trabalhe conosco</a></li>
                 </ul>
@@ -122,6 +123,42 @@
             </div>
         </div>
     </section>
+    <div class="container py-4 py-xl-5" id="fundadores">
+        <div class="row mb-4 mb-lg-5">
+            <div class="col-md-8 col-xl-6 text-center mx-auto">
+                <div class="text-center">
+                    <p class="fw-bold text-success mb-2">Nossos idealizadores</p>
+                    <h1 class="fw-bold">Quem somos</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="card border-0 shadow-none">
+                    <div class="card-body text-center d-flex flex-column align-items-center p-0"><img class="rounded-circle mb-3 fit-cover" width="130" height="130" src="assets/img/team/joelma.png">
+                        <h5 class="fw-bold text-primary card-title mb-0"><strong>Joelma Araujo</strong></h5>
+                        <p class="text-muted card-text mb-2">Elfotec co-founder &amp; CEO<br>Executive director</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-0 shadow-none">
+                    <div class="card-body text-center d-flex flex-column align-items-center p-0"><img class="rounded-circle mb-3 fit-cover" width="130" height="130" src="assets/img/team/francisco.png">
+                        <h5 class="fw-bold text-primary card-title mb-0"><strong>Francisco Fonseca</strong></h5>
+                        <p class="text-muted card-text mb-2">Elfotec co-founder &amp; CTO<br>Software Architect<br></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-0 shadow-none">
+                    <div class="card-body text-center d-flex flex-column align-items-center p-0"><img class="rounded-circle mb-3 fit-cover" width="130" height="130" src="assets/img/team/lauro.jpg">
+                        <h5 class="fw-bold text-primary card-title mb-0"><strong>Lauro César</strong></h5>
+                        <p class="text-muted card-text mb-2">Elfotec co-founder &amp; CIO<br>Smart Business Solutions<br></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <section id="contato" class="position-relative py-4 py-xl-5">
         <div class="container position-relative">
             <div class="row mb-5">
