--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
 </script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/script.min.js"></script>
+    <script src="assets/js/smart-forms.min.min.js"></script>
 </body>
 
 </html>
