Adiciona nossos produtos

--- a/index.html
+++ b/index.html
@@ -123,6 +123,36 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-md-8 col-xl-6 text-center mx-auto">
+                    <p class="fw-bold text-success mb-2">Alguns de nossos produtos</p>
+                    <h3 class="fw-bold">Cases</h3>
+                </div>
+            </div>
+            <div class="mx-auto" style="max-width: 900px;">
+                <div class="row row-cols-1 row-cols-md-2 d-flex justify-content-center">
+                    <div class="col mb-4">
+                        <div class="card bg-info-light">
+                            <div class="card-body text-center px-4 py-5 px-md-5">
+                                <p class="fw-bold text-info card-text mb-2">www.ebrain.clinic</p><img class="rounded img-fluid" src="assets/img/brands/ebrain.jpg" width="88" height="84">
+                                <h5 class="fw-bold card-title mb-3"><br>Software de clínicas estéticas altamente especializado</h5><a class="btn btn-info btn-sm" role="button" href="https://www.ebrain.clinic" target="_blank">www.ebrain.clinic</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-4">
+                        <div class="card bg-secondary-light">
+                            <div class="card-body text-center px-4 py-5 px-md-5">
+                                <p class="fw-bold text-secondary card-text mb-2">SmartHair</p><img class="img-fluid" src="assets/img/brands/smarthair.png" width="285" height="81">
+                                <h5 class="fw-bold card-title mb-3"><br>Soluções de inteligência artificial aplicada à área capilar</h5><a class="btn btn-secondary btn-sm" role="button" href="http://smarthair.io" target="_blank">Smarthair.io</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="container py-4 py-xl-5" id="fundadores">
         <div class="row mb-4 mb-lg-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
